# Medical-RAG-Q-A-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
loaderprac/: csvloader.py  directoryloader.py  textloader.py
ragpipline/: api.py  app.py  data_ingestion.py  data_retriever.py  evaluation.py  medical_agent.py  rag_answer.py  rag_qa.py
